@@ -1,3 +1,7 @@
+2004-02-12  Miklos Szeredi <mszeredi@inf.bme.hu>
+
+	* Remove MS_PERMISSION mount flag (that means something else now)
+	
 2004-02-10  Miklos Szeredi <mszeredi@inf.bme.hu>
 
 	* Added check for i_size_read/write functions to configure.in
